test/tests/NonParameterizedGeneric3.expected
NonParameterizedGeneric3.frost:5:1: error: 'anonymous.Base' expected 1 generic argument, but found 0
1 error
