test/tests/NonParameterizedGeneric3.frost
@extendable
class Base<T> {
}

class NonParameterizedGeneric3 : Base {
}